force-app/main/default/objects/Review__c/fields/Review_Text__c.field-meta.xml
<CustomField>
    <fullName>Review_Text__c</fullName>
    <label>Review Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>