force-app/main/default/objects/Review__c/fields/Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Type__c</fullName>
    <formula>IF( Rating__c &lt; 2.5, &apos;Negative&apos;, &apos;Positive&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Type</label>
    <type>Text</type>
</CustomField>