force-app/main/default/objects/Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Book__c</columns>
    <columns>Rating__c</columns>
    <columns>Review_Date__c</columns>
    <columns>Review_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>